# s21code

./: README.md
3DViewer/src/: Makefile
3DViewer/src/main_menu/: mainwindow.cpp  mainwindow.h  opengl.cpp  opengl.h
C/: README.md
C/3DViewer/src/: test.c  transformation.c  transformation.h
C/SmartCalc/src/: dvi.html
C/decimal/src/: s21_common_func.c  s21_decimal.c  s21_from_float_to_decimal.c  s21_from_int_to_decimal.c  to_addin_s21_decimal.c
C/math/src/: Makefile  s21_abs.c  s21_acos.c  s21_asin.c  s21_ceil.c  s21_fabs.c  s21_floor.c  s21_math.h  s21_sin.c  s21_sqrt.c
C/matrix/src/: Makefile  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_matrix_test.c  s21_mult_matrix.c  s21_mult_number.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
C/stringplus/src/: Makefile  s21_insert.c  s21_memchr.c  s21_memcpy.c  s21_memset.c  s21_strcat.c  s21_strcspn.c  s21_strerror.c  s21_string.h  s21_string_test.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strstr.c  s21_to_lower.c  s21_trim.c
C3_SimpleBashUtils/src/cat/: s21_cat.c
C3_SimpleBashUtils/src/grep/: Makefile  s21_grep.c
C4_s21_math/src/: s21_atan.c  s21_cos.c  s21_exp.c  s21_fmod.c  s21_log.c  s21_pow.c  s21_tan.c  test.c
CPP/: README.md
CPP/3DViewer_v2/src/: CMakeLists.txt  Makefile  main.cc  tests.cc
CPP/3DViewer_v2/src/ui/: viewer_view.ui
CPP/3DViewer_v2/src/viewer/: openglview.cpp  openglview.h  viewer_controller.cc  viewer_controller.h  viewer_exception.h  viewer_model.cc  viewer_model.h  viewer_view.cc  viewer_view.h
CPP/3DViewer_v2/src/viewer/observer/: observer_inteface.h
CPP/3DViewer_v2/src/viewer/strategy/: strategy.cc  strategy.h
CPP/SmartCalc_v2/src/: Makefile
CPP/containers/src/: Makefile  s21_containersplus.h
CPP/matrixplus/src/: s21_matrix_oop.cc  s21_matrix_oop.h  s21_matrix_test.cc
Python/: README.md
Python Bootcamp/Day_03/: readme.md
Python Bootcamp/Day_03/src/: consumer.py  exploit.py
Python Bootcamp/Day_04/src/: personality.py  readme.md
Python/Python Bootcamp/Day_03/: readme.md
Python/Python Bootcamp/Day_05/: README.md
Python/SmartCalc_Desktop_Python/src/: README.md  config_manager.py  help.py  help.txt  logger.py  main.py  requirements.txt  setup.py
SQL/: README.md
SmartCalc/src/: Makefile  s21_calculate.c  s21_calculate.h  s21_stack.c  s21_stack.h  smart_calc_test.c
SmartCalc/src/s21_calculate/: depozit.cpp  depozit.h  kredit.cpp  mainwindow.h
SmartCalc_v2/src/: test.cc
SmartCalc_v2/src/controller/: controller.h  kredit_controller.h
SmartCalc_v2/src/model/: kredit_model.cc  kredit_model.h  model.h
SmartCalc_v2/src/view/: kredit.h  (+1 more)
Test/: telegram_bot 1.py
containers/src/: tests.cc
decimal/src/: Makefile  s21_decimal.h  s21_decimal_test.c  s21_dop_funclion.c  s21_from_decimal_to_float.c  s21_from_decimal_to_int.c
matrix/src/: s21_calc_complements.c  s21_inverse_matrix.c  s21_matrix.h  s21_remove_matrix.c
matrixplus/src/: Makefile
stringplus/src/: s21_memcmp.c  s21_memmove.c  s21_sprintf.c  s21_strchr.c  s21_strcmp.c  s21_strcpy.c  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strspn.c  s21_strtok.c  s21_to_upper.c
vk test/: first_test_vk.py  third_test_vk.cs
(+139 files in other folders)
